welcome footer revert

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -115,7 +115,7 @@
         -->
     </main>
 
-    <footer id="footer" class="container-fluid fixed-bottom"></footer>
+    <footer id="footer" class="container-fluid"></footer>
 
     <!-- JS Libraries -->
     <script src="../libraries/bootstrap.min.js"></script>
@@ -131,9 +131,7 @@
         navbarCBPRemove();
         setTimeout(injectWelcomeBackground, 2850);
         setTimeout(injectWelcome,3000);
-        // setTimeout(injectMyFooter,3000);
-        injectMyFooter();
-        setTimeout(footerRemFixedPosition, 3000);
+        setTimeout(injectMyFooter,3000);
     </script>
 </body>
 
