--- a/pages/resume.html
+++ b/pages/resume.html
@@ -127,13 +127,15 @@
             <ul>
                 <li>Responsive web development using HTML, CSS, and JavaScript.</li>
                 <li>Research business goals, customers and their expected behavior.</li>
-                <li>Propose and update website designs and layouts with key stakeholders.</li>
+                <li>Propose and update designs and layouts with key stakeholders.</li>
                 <li>Processing and editing of digital image and video content. </li>
-                <li>Ensure website is fully mobile and browser compatible.</li>
+                <li>Ensure full mobile and browser compatibility.</li>
                 <li>Testing of all features, site hosting, maintenance, and updates.</li>
                 <li>Continuous Integration / Continuous Deployment (CI/CD).</li>
                 <li>Search Engine Optimization (SEO) and Google Lighthouse.</li>
                 <li>Test Driven Development (TDD), as applicable.</li>
+                <li>Scrum and Agile development methodology, where applicable.</li>
+                <li>Web Content Accessibility Guidelines 2.1.</li>
             </ul>
         </div>
 
