--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
         </section>
 
         <div id="greetingPic">
-            <img src="../pics/profilepic.jpg" class='img-fluid' alt="Pete's profile picture.">
+            <img src="../pics/about/profilepic.jpg" class='img-fluid' alt="Pete's profile picture.">
         </div>
 
         <div id="myIntro" class="myArticles container-fluid">
