--- a/pages/blog.html
+++ b/pages/blog.html
@@ -107,7 +107,7 @@
                             </div>
                             <div class="my-auto">
                                 <p style="text-align:end;font-style:italic;color:white;"><img
-                                        src="../pics/profilepic.jpg" alt="Picture of Pete"
+                                        src="../pics/about/profilepic.jpg" alt="Picture of Pete"
                                         style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> -
                                     Pete, Mar 15, 2022
                                 </p>
@@ -288,7 +288,7 @@
                                         </div>
                                         <div class="my-auto">
                                             <p style="text-align:end;font-style:italic;color:white;"><img
-                                                    src="../pics/profilepic.jpg" alt="Picture of Pete"
+                                                    src="../pics/about/profilepic.jpg" alt="Picture of Pete"
                                                     style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> -
                                                 Pete, Mar 5, 2022
                                             </p>
@@ -445,7 +445,7 @@
                                 <p>Thank you for visiting, and happy coding!</p>
                             </div>
                             <div class="col-sm-6 my-auto">
-                                <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/profilepic.jpg"
+                                <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/about/profilepic.jpg"
                                         alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> -
                                     Pete, Feb 27, 2022
                                 </p>
@@ -633,7 +633,7 @@
                                 coding!</p>
                         </div>
                         <div>
-                            <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/profilepic.jpg"
+                            <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/about/profilepic.jpg"
                                     alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> -
                                 Pete, Feb 20, 2022
                             </p>
@@ -715,7 +715,7 @@
                         <p style="padding-top:-1rem; padding-bottom:2rem;">Please let me know with any suggestions, or
                             comments. Thank you again for visiting my site, and happy coding!</p>
                         <div>
-                            <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/profilepic.jpg"
+                            <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/about/profilepic.jpg"
                                     alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> -
                                 Pete, Feb 16, 2022
                             </p>
@@ -762,7 +762,7 @@
                             in order to
                             pursue a career change that is in line with a personal passion.</p>
                         <p>I look forward to working with you on this exciting part of my journey!</p>
-                        <p style="text-align:end;font-style:italic;padding:0;color:white;"><img src="../pics/profilepic.jpg"
+                        <p style="text-align:end;font-style:italic;padding:0;color:white;"><img src="../pics/about/profilepic.jpg"
                                 alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 4rem -3.5rem 0;">Best
                             Regards,</p>
                         <p style="text-align:end;font-style:italic;padding:0;color:white;">Pete Chu,<br> 9 Feb, 2022</p>
