--- a/pages/projects.html
+++ b/pages/projects.html
@@ -135,7 +135,7 @@
         <div id="myProjects2" class="row container-fluid justify-content-center">
 
             <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/mermaid_camera.gif" class="card-img-top pt-4 mx-auto" alt="Mermaid camera logo"
+                <img src="../pics/projects/mermaid_camera.gif" class="card-img-top pt-4 mx-auto" alt="Mermaid camera logo"
                     style="width:12rem;">
                 <div class="card-body">
                     <h5 class="card-title">Photographer Landingpage</h5>
@@ -154,7 +154,7 @@
             </div>
 
             <div class="card col-sm-4" style="width:18rem;">
-                <img src="../pics/odin-calc.ico" class="card-img-top px-5 pt-2" alt="Calculator image" style="height:10rem;">
+                <img src="../pics/projects/odin-calc.ico" class="card-img-top px-5 pt-2" alt="Calculator image" style="height:10rem;">
                 <div class="card-body">
                     <h5 class="card-title">JavaScript Calculator</h5>
                     <p class="card-text">My <span>third JavaScript Project</span>, this was also completed as part of <a
@@ -171,7 +171,7 @@
             </div>
 
             <div class="card col-sm-4" style="width:18rem;">
-                <img src="../pics/etch-a-sketch.jpg" class="card-img-top py-4" alt="Screenshot of etch-a-sketch project.">
+                <img src="../pics/projects/etch-a-sketch.jpg" class="card-img-top py-4" alt="Screenshot of etch-a-sketch project.">
                 <div class="card-body">
                     <h5 class="card-title">Etch-A-Sketch</h5>
                     <p class="card-text">My <span>second JavaScript Project</span>, this was completed as part of <a
@@ -188,7 +188,7 @@
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/rock-paper-scissors.png" class="card-img-top mx-auto"
+                <img src="../pics/projects/rock-paper-scissors.png" class="card-img-top mx-auto"
                     alt="Screenshot of a Rock, Paper, Scissors project." style="width:12rem;">
                 <div class="card-body">
                     <h5 class="card-title">Rock, Paper, Scissors</h5>
@@ -206,8 +206,8 @@
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/odin-landingpage.jpg" class="card-img-top mx-auto pt-4"
-                    alt="Screenshot of a Rock, Paper, Scissors project." style="width:12rem;">
+                <img src="../pics/projects/odin-landingpage.jpg" class="card-img-top mx-auto pt-4"
+                    alt="Screenshot of a landingpage project." style="width:12rem;">
                 <div class="card-body">
                     <h5 class="card-title">Landingpage Project</h5>
                     <p class="card-text">My <span>first Landingpage</span>, this was completed as part of <a
