--- a/pages/resume.html
+++ b/pages/resume.html
@@ -105,7 +105,7 @@
             <h1 class="text-center mb-4">Experience</h1>
             <div class="row">
                 <div class="col-sm-8">
-                    <h3>Company <img class='float-end' src="../pics/lenovainc_logo.gif" alt="LeNova Logo"></h3>
+                    <h3>Company <img class='float-end' src="../pics/about/lenovainc_logo.gif" alt="LeNova Logo"></h3>
                     <h5>LeNova, Inc. <a href="https://www.lenovainc.com/" target="_blank">Website</a></h5>
                 </div>
                 <div class="col-sm-4">
@@ -142,7 +142,7 @@
         <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-sm-8">
-                    <h3>Company <img class='float-end' src="../pics/eisai_logo.png" alt="Eisai Logo"></h3>
+                    <h3>Company <img class='float-end' src="../pics/about/eisai_logo.png" alt="Eisai Logo"></h3>
                     <h5>Eisai, Inc. <a href="https://us.eisai.com/" target="_blank">Website</a></h5>
                 </div>
                 <div class="col-sm-4">
@@ -191,7 +191,7 @@
         <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-sm-8">
-                    <h3>Company <img class='float-end' src="../pics/janssen_logo.jpg" alt="Eisai Logo"
+                    <h3>Company <img class='float-end' src="../pics/about/janssen_logo.jpg" alt="Eisai Logo"
                             style="border-radius:100%;">
                     </h3>
                     <h5> Janssen Pharmaceuticals <a href="https://www.janssen.com/" target="_blank">Website</a></h5>
@@ -242,7 +242,7 @@
         <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-sm-8">
-                    <h3>Company <img class='float-end' src="../pics/ipsdb_logo.gif" alt="IPS Logo"></h3>
+                    <h3>Company <img class='float-end' src="../pics/about/ipsdb_logo.gif" alt="IPS Logo"></h3>
                     <h5>Integrated Project Services <a href="https://www.ipsdb.com/" target="_blank">Website</a></h5>
                 </div>
                 <div class="col-sm-4">
