--- a/pages/contact.html
+++ b/pages/contact.html
@@ -55,7 +55,7 @@
             </div>
             <div class="col-sm-7 my-auto">
                 <div class="d-flex gap-3">
-                    <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class='img-fluid p-1 contactLogoSquare' style='margin-left:0.125rem;margin-right:-0.125rem' src="../pics/linkedin_white.png" alt="LinkedIn Logo"></a>
+                    <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class='img-fluid p-1 contactLogoSquare' style='margin-left:0.125rem;margin-right:-0.125rem' src="../pics/contact/linkedin_white.png" alt="LinkedIn Logo"></a>
                     <h6 class="my-auto">@codeByPete</h6>
                 </div>
                 <div class="d-flex gap-3">
@@ -69,11 +69,11 @@
             </div>
             <div class="col-sm-5 my-auto">
                 <div class="d-flex gap-3">
-                    <a href="https://github.com/codetracklift" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/GitHub-Mark-Light-64px.png" alt="Git Hub Logo"></a>
+                    <a href="https://github.com/codetracklift" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/contact/GitHub-Mark-Light-64px.png" alt="Git Hub Logo"></a>
                     <h6 class="my-auto">@codeTrackLift</h6>
                 </div>
                 <div class="d-flex gap-3">
-                    <a href="https://twitter.com/codeTrackLift" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Logo"></a>
+                    <a href="https://twitter.com/codeTrackLift" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/contact/Twitter_social_icons-circle-white.png" alt="Twitter Logo"></a>
                     <h6 class="my-auto">@codeTrackLift</h6>
                 </div>
             </div>
