github contributions add

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -110,6 +110,12 @@
 
             </div>
 
+            <div id='githubContributions' class="container-fluid text-center">
+            <a href="https://github.com/codeTrackLift" target="_blank">
+                    <img src="../pics/about/githubContributions.png" alt="GitHub contribution">
+                </a>
+            </div>
+
         </section> 
 
         -->
