--- a/pages/about.html
+++ b/pages/about.html
@@ -60,6 +60,12 @@
             </div>
         </div>
 
+        <div id='githubContributions' class="container-fluid text-center">
+           <a href="https://github.com/codeTrackLift" target="_blank">
+                <img src="../pics/about/githubContributions.png" alt="GitHub contribution">
+            </a>
+        </div>
+
         <div id="personal" class="myArticles container-fluid my-4">
             <h1 class="text-center mb-4">Personal Stuff</h1>
             <div class="row">
