typewriter section mb-1

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,7 +34,7 @@
 
     <main id="mainContent">
 
-        <section id="typeWriterSection">
+        <section id="typeWriterSection" class="mb-1">
             <figure id='typeWriter' class="mx-auto">
                 <h2 id="typeWriter1"><span style='color:darkorchid;'>while</span> (<span style="color:cornflowerblue">alive</span>) {</h2>
                 <h2 id="typeWriter2"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>code</span>()<span style='color:gray;'>;</span></h2>
