--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -55,6 +55,7 @@
 
     <!-- JS Libraries -->
     <script src="../libraries/bootstrap.min.js"></script>
+    <script src="../libraries/ScrollMagic.min.js"></script>
 
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
@@ -67,6 +68,7 @@
         navbarCBPRemove();
         setTimeout(injectWelcomeBackground, 2850);
         setTimeout(injectWelcome,3000);
+        setTimeout(initScrollMagic,3100);
         setTimeout(injectMyFooter,3000);
     </script>
 </body>
