--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,16 +36,23 @@
 
         <section id="typeWriterSection" class="mb-1">
             <figure id='typeWriter' class="mx-auto">
-                <h2 id="typeWriter1"><span style='color:darkorchid;'>while</span> (<span style="color:cornflowerblue">alive</span>) {</h2>
-                <h2 id="typeWriter2"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>code</span>()<span style='color:gray;'>;</span></h2>
-                <h2 id="typeWriter3"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>track</span>(<span style='color:cornflowerblue;'>macros</span>)<span style='color:gray;'>;</span></h2>
-                <h2 id="typeWriter4"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>lift</span>(<span style='color:cornflowerblue'>weights</span>)<span style='color:gray;'>;</span></h2>
+                <h2 id="typeWriter1"><span style='color:darkorchid;'>while</span> (<span
+                        style="color:cornflowerblue">alive</span>) {</h2>
+                <h2 id="typeWriter2"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span
+                        style='color:chocolate'>code</span>()<span style='color:gray;'>;</span></h2>
+                <h2 id="typeWriter3"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span
+                        style='color:chocolate'>track</span>(<span style='color:cornflowerblue;'>macros</span>)<span
+                        style='color:gray;'>;</span></h2>
+                <h2 id="typeWriter4"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span
+                        style='color:chocolate'>lift</span>(<span style='color:cornflowerblue'>weights</span>)<span
+                        style='color:gray;'>;</span></h2>
                 <h2 id="typeWriter5">}</h2>
             </figure>
         </section>
 
         <div id="greetingPic">
-            <img src="../pics/about/crushItApple.jpg" class='img-fluid' alt="Core Nutritionals logo with Apple logo glowing behind.">
+            <img src="../pics/about/crushItApple.jpg" class='img-fluid'
+                alt="Core Nutritionals logo with Apple logo glowing behind.">
         </div>
 
         <div class="container-fluid myArticles row mt-4">
@@ -55,29 +62,36 @@
             </div>
             <div class="col-sm-7 my-auto">
                 <div class="d-flex gap-3">
-                    <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class='img-fluid p-1 contactLogoSquare' style='margin-left:0.125rem;margin-right:-0.125rem' src="../pics/contact/linkedin_white.png" alt="LinkedIn Logo"></a>
+                    <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img
+                            class='img-fluid p-1 contactLogoSquare' style='margin-left:0.125rem;margin-right:-0.125rem'
+                            src="../pics/contact/linkedin_white.png" alt="LinkedIn Logo"></a>
                     <h6 class="my-auto">@codeByPete</h6>
                 </div>
                 <div class="d-flex gap-3">
                     <img class='img-fluid contactLogo' src="../pics/contact/phoneIcon.gif" alt="Phone icon.">
-                    <img src="../pics/contact/phoneGvoice.gif" class="img-fluid py-2" style='max-width:7rem;margin-left:-0.25rem;' alt="Phone number picture">
+                    <img src="../pics/contact/phoneGvoice.gif" class="img-fluid py-2"
+                        style='max-width:7rem;margin-left:-0.25rem;' alt="Phone number picture">
                 </div>
                 <div class="d-flex gap-3" style="margin-top:-0.25rem;">
-                    <a href="mailto:codeTrackLift@gmail.com" target="_blank"><img class='img-fluid contactLogo' src="../pics/contact/emailIcon.gif" alt="Email icon."></a>
-                    <img src="../pics/contact/emailGmail.gif" class="img-fluid" style='max-width:15rem;margin-left:-0.5rem;' alt="Email picture">
+                    <a href="mailto:codeTrackLift@gmail.com" target="_blank"><img class='img-fluid contactLogo'
+                            src="../pics/contact/emailIcon.gif" alt="Email icon."></a>
+                    <img src="../pics/contact/emailGmail.gif" class="img-fluid"
+                        style='max-width:15rem;margin-left:-0.5rem;' alt="Email picture">
                 </div>
             </div>
             <div class="col-sm-5 my-auto">
                 <div class="d-flex gap-3">
-                    <a href="https://github.com/codetracklift" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/contact/GitHub-Mark-Light-64px.png" alt="Git Hub Logo"></a>
+                    <a href="https://github.com/codetracklift" target="_blank"><img class='img-fluid contactLogo p-1'
+                            src="../pics/contact/GitHub-Mark-Light-64px.png" alt="Git Hub Logo"></a>
                     <h6 class="my-auto">@codeTrackLift</h6>
                 </div>
                 <div class="d-flex gap-3">
-                    <a href="https://twitter.com/codeTrackLift" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/contact/Twitter_social_icons-circle-white.png" alt="Twitter Logo"></a>
+                    <a href="https://twitter.com/codeTrackLift" target="_blank"><img class='img-fluid contactLogo p-1'
+                            src="../pics/contact/Twitter_social_icons-circle-white.png" alt="Twitter Logo"></a>
                     <h6 class="my-auto">@codeTrackLift</h6>
                 </div>
             </div>
-            
+
         </div>
 
         <div id='contact' class='myArticles container-fluid mt-4'>
@@ -92,27 +106,47 @@
                     </div>
                     <div class='form-item row'>
                         <label class='col-sm-2' for="">Email:</label>
-                        <input class='col-sm-10' type="email" name='email' placeholder="Enter email@domain.com" required>
+                        <input class='col-sm-10' type="email" name='email' placeholder="Enter email@domain.com"
+                            required>
                     </div>
                     <div class='form-item row'>
                         <label class='col-sm-2' for="">Message:</label>
-                        <textarea class='col-sm-10' name="message" cols="30" rows="5" placeholder="Let me know you visited! Need help with a project?" required></textarea>
+                        <textarea class='col-sm-10' name="message" cols="30" rows="5"
+                            placeholder="Let me know you visited! Need help with a project?" required></textarea>
                     </div>
                     <input type="hidden" name="_subject" value="New codeByPete Inquiry!">
                     <input type="hidden" name="_template" value="basic">
                     <div class="text-center">
-                        <button id='emailButton' onclick="buttonEffect('emailButton')" class='btn btn-secondary text-center'>Send Message</button>
+                        <button id='emailButton' onclick="buttonEffect('emailButton')"
+                            class='btn btn-secondary text-center'>Send Message</button>
                     </div>
                 </form>
             </div>
         </div>
 
-        <div id='googleMap' class="container-fluid text-center">
+        <!-- <div id='googleMap' class="container-fluid text-center">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1976040.4504721882!2d-76.43266417409015!3d39.943936309783176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c191f3adf4a9%3A0x4066eeee7bc551d0!2sPhiladelphia%20Metropolitan%20Area!5e1!3m2!1sen!2sus!4v1646411057945!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></iframe>
+        </div> -->
+
+        <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"My Pharmaceutical experience
+                        gives me deep insight into Good Documentation Practices (GDPs)."</h3>
+                </div>
+                <div class="carousel-item">
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Working within a team
+                        involves acknowledging each team member as an individual."</h3>
+                </div>
+                <div class="carousel-item">
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects involve
+                        planning before implementation, and verification before release."</h3>
+                </div>
+            </div>
         </div>
 
     </main>
-        
+
     <footer id="footer" class="container-fluid"></footer>
 
     <!-- JS Libraries -->
