--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -51,6 +51,23 @@
 
     <main id="mainContent"></main>
 
+    <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"My Pharmaceutical experience
+                    gives me deep insight into Good Documentation Practices (GDPs)."</h3>
+            </div>
+            <div class="carousel-item">
+                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Working within a team
+                    involves acknowledging each team member as an individual."</h3>
+            </div>
+            <div class="carousel-item">
+                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects involve
+                    planning before implementation, and verification before release."</h3>
+            </div>
+        </div>
+    </div>
+
     <footer id="footer" class="container-fluid"></footer>
 
     <!-- JS Libraries -->
