--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -86,6 +86,7 @@
         setTimeout(injectWelcomeBackground, 2850);
         setTimeout(injectWelcome,3000);
         setTimeout(initScrollMagic,3100);
+        setTimeout(unhideCarousel,3100);
         setTimeout(injectMyFooter,3000);
     </script>
 </body>
