--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -62,8 +62,7 @@
                     involves acknowledging each team member as an individual."</h3>
             </div>
             <div class="carousel-item">
-                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects involve
-                    planning before implementation, and verification before release."</h3>
+                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are planned before implementation, and tested before release."</h3>
             </div>
         </div>
     </div>
