--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -55,7 +55,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"My Pharmaceutical experience
-                    gives me deep insight into Good Documentation Practices."</h3>
+                    provides deep insight into Good Documentation Practices."</h3>
             </div>
             <div class="carousel-item">
                 <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Working within a team
