--- a/pages/contact.html
+++ b/pages/contact.html
@@ -132,7 +132,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"My Pharmaceutical experience
-                        provides deep insight into Good Documentation Practices."</h3>
+                        gives deep insight into Good Documentation Practices."</h3>
                 </div>
                 <div class="carousel-item">
                     <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Working within a team
