--- a/pages/contact.html
+++ b/pages/contact.html
@@ -131,15 +131,15 @@
         <div id="carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"My Pharmaceutical experience
-                        gives deep insight into Good Documentation Practices."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Pharmaceutical experience
+                        drives my Good Documentation Practices (GDPs)."</h3>
                 </div>
                 <div class="carousel-item">
                     <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Working within a team
-                        involves acknowledging each team member as an individual."</h3>
+                        involves acknowledging each member as an individual."</h3>
                 </div>
                 <div class="carousel-item">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are planned before implementation, and tested before release."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are planned before implementation and tested before release."</h3>
                 </div>
             </div>
         </div>
