--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -56,13 +56,22 @@
             <div class="carousel-item active">
                 <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Pharmaceutical experience
                     drives my Good Documentation Practices (GDPs)."</h3>
+                <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                    <cite title="Source Title">quoteByPete</cite>
+                </figcaption>
             </div>
             <div class="carousel-item">
                 <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Working within a team
                     involves acknowledging each member as an individual."</h3>
+                <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                    <cite title="Source Title">quoteByPete</cite>
+                </figcaption>
             </div>
             <div class="carousel-item">
                 <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are planned before implementation and tested before release."</h3>
+                <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                    <cite title="Source Title">quoteByPete</cite>
+                </figcaption>
             </div>
         </div>
     </div>
