--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -61,8 +61,7 @@
                 </figcaption>
             </div>
             <div class="carousel-item">
-                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Working within a team
-                    involves acknowledging each member as an individual."</h3>
+                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Front-load effort, and spend time to understand the problem before proposing a solution."</h3>
                 <figcaption class="blockquote-footer text-end mt-3 mx-5">
                     <cite title="Source Title">quoteByPete</cite>
                 </figcaption>
