--- a/pages/contact.html
+++ b/pages/contact.html
@@ -138,13 +138,13 @@
                     </figcaption>
                 </div>
                 <div class="carousel-item">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Front-load effort, and spend time to understand the problem before proposing a solution."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Front-load effort, spend time to understand the problem before proposing a solution."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
                         <cite title="Source Title">quoteByPete</cite>
                     </figcaption>
                 </div>
                 <div class="carousel-item">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are planned before implementation and tested before release."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are planned before implementation, and tested before release."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
                         <cite title="Source Title">quoteByPete</cite>
                     </figcaption>
