--- a/pages/projects.html
+++ b/pages/projects.html
@@ -62,7 +62,7 @@
                     <h5 class="card-title">Real-Time Bus Tracker</h5>
                     <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
                             Bootcamp Project</span> uses asynchronous JavaScript functions to fetch API data.</p>
-                    <p class="card-text">Custom styling and extra user interface functionality was added.</p>
+                    <p class="card-text">Custom styling and extra user interface functionality was added, see <a href="../pages/blog.html#blog6Button">blog[6]</a>.</p>
                         <div class="btnContainer">
                             <a id='animatedHeadDemo' onclick="buttonEffect('animatedHeadDemo')" href="https://codetracklift.github.io/bustracker/" class="btn btn-secondary"
                                 target="_blank">Try Demo</a>
