--- a/pages/blog.html
+++ b/pages/blog.html
@@ -69,6 +69,63 @@
 
             <div class="accordion-item">
                 <h2 class="accordion-header">
+                    <button id='blog6Button' onclick="blog6Open()" class="accordion-button collapsed bg-transparent"
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
+                        aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">6</span><span
+                                style='color:dodgerblue'>]</span></h6>
+                        <h5>Real-Time Bus Tracker</h5>
+                    </button>
+                </h2>
+                <div id="blog6" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                    <div class="accordion-body">
+                        <h4 class="text-center mb-4">Greetings!</h4>
+                        <div class="row">
+                            <div class="col-sm-6 my-auto">
+                                <iframe id='blog6Video' class='container-fluid ratio ratio-1x1'
+                                    src="https://youtube.com/embed/WS8yUCF8TLI" frameborder="0" allowfullscreen>
+                                </iframe>
+                            </div>
+                            <div class="col-sm-6">
+                                <p>
+                                    Our <span class="text-white">Full Stack Coding Bootacmp</span> project this week involved <a href="https://developer.mozilla.org/en-US/docs/Web/API/fetch" target="_blank">fetching</a> data from an <span class="menloRegular chocolate">Application Programming Interface</span> (<a href="https://developer.mozilla.org/en-US/docs/Web/API" target="_blank">API</a>) and use it to show and update live bus locations.
+                                </p>
+                                <p>
+                                    This video shows a small portion of the code and how the bus array used to create and move individual map markers.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row my-3">
+                            <div class="col-sm-4 col-md-6">
+                                <p>After figuring out how to move the array of map markers using a loop, I decided to further build upon the project.</p>
+                                <p><span class="text-white">Additional features</span> include: map controls, light/dark mode toggle button, refresh timer, and a last updated time.</p>
+                                <p class="d-none d-md-block">The map markers are also assigned a random color, which is color-coded with a 'bus id' list. The 'bus id' list will show once the application is running.</p>
+                                <p class="d-none d-md-block">Please see the <a href="../pages/projects.html">Projects</a> section of my portfolio to check out the deployed demo, and let me know what you think.</p>
+                            </div>
+                            <div class="col-sm-8 col-md-6 row">
+                                <img src="../pics/projects/busTracker.gif" class="row img-fluid my-auto py-3" alt="Bus tracker project gif.">
+                                <p class="col-sm-6 d-md-none">The map markers are also assigned a random color, which is color-coded with a 'bus id' list. The 'bus id' list will show once the application is running.</p>
+                                <p class="col-sm-6 d-md-none">Please see the <a href="../pages/projects.html">Projects</a> section of my portfolio to check out the deployed demo, and let me know what you think.</p>
+                            </div>
+                        </div>
+                        <div class="'container-fluid row">
+                            <div class="text-end">
+                                <p>Happy coding!</p>
+                            </div>
+                            <div class="my-auto">
+                                <p style="text-align:end;font-style:italic;color:white;"><img
+                                        src="../pics/about/profilepic.gif" alt="Picture of Pete" class="profilePic"> -
+                                    Pete, Mar 22, 2022
+                                </p>
+                                <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- accodion-item closing div -->
+
+            <div class="accordion-item">
+                <h2 class="accordion-header">
                     <button id='blog5Button' onclick="blog5Open()" class="accordion-button collapsed bg-transparent"
                         type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
                         aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
@@ -184,7 +241,7 @@
                                             alt="Screenshot of HTML show the 'Typewriter' Section."></a>
                                 </div>
                                 <div class="col-md-7 my-auto">
-                                    <p class='narrowText'>I wanted to simulate typing multiple lines of code, I needed a
+                                    <p>I wanted to simulate typing multiple lines of code, I needed a
                                         way
                                         to control and delay each row individually. I chose to assign <a
                                             href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id"
@@ -374,7 +431,7 @@
                                     class='d-none d-sm-block img-fluid col-sm-2 m-auto p-4' alt="PacMan chasing logo."
                                     style="max-width:25vw;">
                                 <div class="col-sm-10 m-auto" style="max-width: 640px;">
-                                    <p class="narrowText">I decided to add some additional features: <span
+                                    <p>I decided to add some additional features: <span
                                             style="color:white;">user
                                             controls</span>, image support for vertical movement, and integration of the
                                         previous 'Magic Ball
@@ -585,7 +642,7 @@
                                             alt="Screenshot of JavaScript showing the global variables for 2D ball movement.">
                                     </a>
                                 </div>
-                                <p>Image 3 shows the opening <a
+                                <p class="narrowText">Image 3 shows the opening <a
                                         href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script"
                                         target="_blank">'script'</a> tag, which denotes the beginning of the JavaScript
                                     code
@@ -607,7 +664,7 @@
                                             alt="Screenshot of JavaScript showing the 2D ball movement function.">
                                     </a>
                                 </div>
-                                <p>Image 4 shows the 2D ball movement function using <a
+                                <p class="narrowText">Image 4 shows the 2D ball movement function using <a
                                         href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions"
                                         target="_blank">JavaScript arrow syntax</a>. <a
                                         href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/if...else'
@@ -616,7 +673,7 @@
                                     limit is reached, the corresponding 'velocity' variable is multiplied by -1 to
                                     reverse
                                     directions.</p>
-                                <p>If no limits are reached, the 'position' is updated by adding the 'velocity'
+                                <p class="narrowText">If no limits are reached, the 'position' is updated by adding the 'velocity'
                                     variable.
                                     The CSS is then
                                     updated by assigning the 'left' and 'top' styles to the x-axis and y-axis
@@ -625,7 +682,7 @@
                                     that the 'px' suffix is added via <a
                                         href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Addition'
                                         target='_blank'>'addition operator concatenation'</a>.</p>
-                                <p>Finally, the <a href='https://developer.mozilla.org/en-US/docs/Web/API/setInterval'
+                                <p class="narrowText">Finally, the <a href='https://developer.mozilla.org/en-US/docs/Web/API/setInterval'
                                         target='_blank'>'setInterval'</a> method is used to call the 'moveBall2D'
                                     function
                                     based on the
@@ -669,7 +726,7 @@
                                 </p>
                             </div>
                             <div class="col-sm-6 my-auto">
-                                <p>Next is an <a
+                                <p class="narrowText">Next is an <a
                                         href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions'
                                         target='_blank'>arrow function</a> that includes a <a
                                         href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/if...else'
