--- a/pages/about.html
+++ b/pages/about.html
@@ -66,7 +66,7 @@
             </a>
         </div>
 
-        <div id="personal" class="myArticles container-fluid my-4">
+        <div id="personal" class="myArticles container-fluid">
             <h1 class="text-center mb-4">Personal Stuff</h1>
             <div class="row">
                 <div class="col-sm-4 text-center">
