--- a/pages/construction.html
+++ b/pages/construction.html
@@ -8,6 +8,19 @@
 
     <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P18XGH56KT"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-P18XGH56KT');
+    </script>
+
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="../libraries/bootstrap.min.css">
 
@@ -47,7 +60,9 @@
     <script src="../libraries/bootstrap.min.js"></script>
 
     <script src="../js/footer.js"></script>
-    <script>setTimeout(injectMyFooter,4000)</script>
+    <script>
+        setTimeout(injectMyFooter, 4000)
+    </script>
 </body>
 
 </html>
