--- a/index.html
+++ b/index.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name='description'
+        content='codeByPete codeTrackLift Peter Pete Chu Web Developer Software Developer Full Stack Portfolio'>
         
-        <meta name='description' content='codeByPete codeTrackLift Peter Pete Chu Web Developer Software Developer Full Stack Portfolio'>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P18XGH56KT"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-        <!-- Index.html Re-Direct Here -->
-        <meta http-equiv="refresh" content="0; URL=./pages/welcome.html" />
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-        <!-- My CSS & JS -->
-        <link rel="stylesheet" href="./css/global.css">
-        <link rel="shortcut icon" type='image/x-icon' href="./favicon.ico">
+        gtag('config', 'G-P18XGH56KT');
+    </script>
 
-        <title>codeByPete</title>
-    </head>
+    <!-- Index.html Re-Direct Here -->
+    <meta http-equiv="refresh" content="0; URL=./pages/welcome.html" />
 
-    <body>
-        
-    </body>
+    <!-- My CSS & JS -->
+    <link rel="stylesheet" href="./css/global.css">
+    <link rel="shortcut icon" type='image/x-icon' href="./favicon.ico">
+
+    <title>codeByPete</title>
+</head>
+
+<body>
+
+</body>
+
 </html>
