--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,6 +8,19 @@
 
     <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P18XGH56KT"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-P18XGH56KT');
+    </script>
+
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="../libraries/bootstrap.min.css">
 
@@ -88,24 +101,41 @@
                             </div>
                             <div class="col-sm-6">
                                 <p>
-                                    Our <span class="text-white">Full Stack Coding Bootacmp</span> project this week involved <a href="https://developer.mozilla.org/en-US/docs/Web/API/fetch" target="_blank">fetching</a> data from an <span class="menloRegular chocolate">Application Programming Interface</span> (<a href="https://developer.mozilla.org/en-US/docs/Web/API" target="_blank">API</a>) and use it to show and update live bus locations.
+                                    Our <span class="text-white">Full Stack Coding Bootacmp</span> project this week
+                                    involved <a href="https://developer.mozilla.org/en-US/docs/Web/API/fetch"
+                                        target="_blank">fetching</a> data from an <span
+                                        class="menloRegular chocolate">Application Programming Interface</span> (<a
+                                        href="https://developer.mozilla.org/en-US/docs/Web/API" target="_blank">API</a>)
+                                    and use it to show and update live bus locations.
                                 </p>
                                 <p>
-                                    This video shows a small portion of the code and how the bus array used to create and move individual map markers.
+                                    This video shows a small portion of the code and how the bus array used to create
+                                    and move individual map markers.
                                 </p>
                             </div>
                         </div>
                         <div class="row my-3">
                             <div class="col-sm-4 col-md-6">
-                                <p>After figuring out how to move the array of map markers using a loop, I decided to further build upon the project.</p>
-                                <p><span class="text-white">Additional features</span> include: map controls, light/dark mode toggle button, refresh timer, and a last updated time.</p>
-                                <p class="d-none d-md-block">The map markers are also assigned a random color, which is color-coded with a 'bus id' list. The 'bus id' list will show once the application is running.</p>
-                                <p class="d-none d-md-block">Please see the <a href="../pages/projects.html">Projects</a> section of my portfolio to check out the deployed demo, and let me know what you think.</p>
+                                <p>After figuring out how to move the array of map markers using a loop, I decided to
+                                    further build upon the project.</p>
+                                <p><span class="text-white">Additional features</span> include: map controls, light/dark
+                                    mode toggle button, refresh timer, and a last updated time.</p>
+                                <p class="d-none d-md-block">The map markers are also assigned a random color, which is
+                                    color-coded with a 'bus id' list. The 'bus id' list will show once the application
+                                    is running.</p>
+                                <p class="d-none d-md-block">Please see the <a
+                                        href="../pages/projects.html">Projects</a> section of my portfolio to check out
+                                    the deployed demo, and let me know what you think.</p>
                             </div>
                             <div class="col-sm-8 col-md-6 row">
-                                <img src="../pics/projects/busTracker.gif" class="row img-fluid my-auto py-3" alt="Bus tracker project gif.">
-                                <p class="col-sm-6 d-md-none">The map markers are also assigned a random color, which is color-coded with a 'bus id' list. The 'bus id' list will show once the application is running.</p>
-                                <p class="col-sm-6 d-md-none">Please see the <a href="../pages/projects.html">Projects</a> section of my portfolio to check out the deployed demo, and let me know what you think.</p>
+                                <img src="../pics/projects/busTracker.gif" class="row img-fluid my-auto py-3"
+                                    alt="Bus tracker project gif.">
+                                <p class="col-sm-6 d-md-none">The map markers are also assigned a random color, which is
+                                    color-coded with a 'bus id' list. The 'bus id' list will show once the application
+                                    is running.</p>
+                                <p class="col-sm-6 d-md-none">Please see the <a
+                                        href="../pages/projects.html">Projects</a> section of my portfolio to check out
+                                    the deployed demo, and let me know what you think.</p>
                             </div>
                         </div>
                         <div class="'container-fluid row">
@@ -431,8 +461,7 @@
                                     class='d-none d-sm-block img-fluid col-sm-2 m-auto p-4' alt="PacMan chasing logo."
                                     style="max-width:25vw;">
                                 <div class="col-sm-10 m-auto" style="max-width: 640px;">
-                                    <p>I decided to add some additional features: <span
-                                            style="color:white;">user
+                                    <p>I decided to add some additional features: <span style="color:white;">user
                                             controls</span>, image support for vertical movement, and integration of the
                                         previous 'Magic Ball
                                         Challenge' to give PacMan something to do. Check out the images and write-up
@@ -673,7 +702,8 @@
                                     limit is reached, the corresponding 'velocity' variable is multiplied by -1 to
                                     reverse
                                     directions.</p>
-                                <p class="narrowText">If no limits are reached, the 'position' is updated by adding the 'velocity'
+                                <p class="narrowText">If no limits are reached, the 'position' is updated by adding the
+                                    'velocity'
                                     variable.
                                     The CSS is then
                                     updated by assigning the 'left' and 'top' styles to the x-axis and y-axis
@@ -682,7 +712,8 @@
                                     that the 'px' suffix is added via <a
                                         href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Addition'
                                         target='_blank'>'addition operator concatenation'</a>.</p>
-                                <p class="narrowText">Finally, the <a href='https://developer.mozilla.org/en-US/docs/Web/API/setInterval'
+                                <p class="narrowText">Finally, the <a
+                                        href='https://developer.mozilla.org/en-US/docs/Web/API/setInterval'
                                         target='_blank'>'setInterval'</a> method is used to call the 'moveBall2D'
                                     function
                                     based on the
@@ -751,8 +782,7 @@
                         </div>
                         <div>
                             <p style="text-align:end;font-style:italic;color:white;"><img
-                                    src="../pics/about/profilepic.gif" alt="Picture of Pete"
-                                    class="profilePic"> -
+                                    src="../pics/about/profilepic.gif" alt="Picture of Pete" class="profilePic"> -
                                 Pete, Feb 20, 2022
                             </p>
                             <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
@@ -847,8 +877,7 @@
                             comments. Thank you again for visiting my site, and happy coding!</p>
                         <div>
                             <p style="text-align:end;font-style:italic;color:white;"><img
-                                    src="../pics/about/profilepic.gif" alt="Picture of Pete"
-                                    class="profilePic"> -
+                                    src="../pics/about/profilepic.gif" alt="Picture of Pete" class="profilePic"> -
                                 Pete, Feb 16, 2022
                             </p>
                             <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
@@ -904,8 +933,7 @@
                             pursue a career change that is in line with a personal passion.</p>
                         <p>I look forward to working with you on this exciting part of my journey!</p>
                         <p style="text-align:end;font-style:italic;padding:0;color:white;"><img
-                                src="../pics/about/profilepic.gif" alt="Picture of Pete"
-                                class="profilePic">Best
+                                src="../pics/about/profilepic.gif" alt="Picture of Pete" class="profilePic">Best
                             Regards,</p>
                         <p style="text-align:end;font-style:italic;padding:0;color:white;">Pete Chu,<br> 9 Feb, 2022</p>
                         <p style="text-align:end;font-style:italic;padding:0;color:white;">Student @ MIT xPro</p>
