--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,6 +8,19 @@
 
     <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P18XGH56KT"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-P18XGH56KT');
+    </script>
+
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="../libraries/bootstrap.min.css">
 
@@ -138,13 +151,15 @@
                     </figcaption>
                 </div>
                 <div class="carousel-item">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Front-load effort, spend time to understand the problem before proposing a solution."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Front-load effort, spend time
+                        to understand the problem before proposing a solution."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
                         <cite title="Source Title">quoteByPete</cite>
                     </figcaption>
                 </div>
                 <div class="carousel-item">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are planned before implementation, and tested before release."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are
+                        planned before implementation, and tested before release."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
                         <cite title="Source Title">quoteByPete</cite>
                     </figcaption>
