--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,6 +8,19 @@
 
     <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P18XGH56KT"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-P18XGH56KT');
+    </script>
+
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="../libraries/bootstrap.min.css">
 
@@ -37,8 +50,8 @@
 
         <section id="typeWriterSection">
             <figure id='typeWriter' class="mx-auto">
-                <h2 id="typeWriter1"><span style="color: cornflowerblue">stationInLife</span><span style='color:gray;'>.</span><span
-                        style="color:darkorchid;">replace</span>(</h2>
+                <h2 id="typeWriter1"><span style="color: cornflowerblue">stationInLife</span><span
+                        style='color:gray;'>.</span><span style="color:darkorchid;">replace</span>(</h2>
                 <h2 id="typeWriter2"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
                         style="color: #00857c;">Pharmaceutical
                         Engineer</span>'<span style='color:gray;'>,</span></h2>
@@ -62,13 +75,16 @@
                     <h5 class="card-title">Real-Time Bus Tracker</h5>
                     <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
                             Bootcamp Project</span> uses asynchronous JavaScript functions to fetch API data.</p>
-                    <p class="card-text">Custom styling and extra user interface functionality was added, see <a href="../pages/blog.html#blog6Button">blog[6]</a>.</p>
-                        <div class="btnContainer">
-                            <a id='animatedHeadDemo' onclick="buttonEffect('animatedHeadDemo')" href="https://codetracklift.github.io/bustracker/" class="btn btn-secondary"
-                                target="_blank">Try Demo</a>
-                            <a id='animatedHeadRepo' onclick="buttonEffect('animatedHeadRepo')" href="https://github.com/codeTrackLift/bustracker" class="btn btn-secondary btnRepo "
-                                target="'_blank">View Repo</a>
-                        </div>
+                    <p class="card-text">Custom styling and extra user interface functionality was added, see <a
+                            href="../pages/blog.html#blog6Button">blog[6]</a>.</p>
+                    <div class="btnContainer">
+                        <a id='animatedHeadDemo' onclick="buttonEffect('animatedHeadDemo')"
+                            href="https://codetracklift.github.io/bustracker/" class="btn btn-secondary"
+                            target="_blank">Try Demo</a>
+                        <a id='animatedHeadRepo' onclick="buttonEffect('animatedHeadRepo')"
+                            href="https://github.com/codeTrackLift/bustracker" class="btn btn-secondary btnRepo "
+                            target="'_blank">View Repo</a>
+                    </div>
                 </div>
             </div>
 
@@ -81,30 +97,34 @@
                             Bootcamp Project</span> demonstrates use of 'onmouse' and 'ontouch' event handlers.</p>
                     <p class="card-text"><span>Custom CSS</span> 'aesthetics' and 'typewriter' text was added, see <a
                             href="../pages/blog.html#blog5Button">blog[5]</a>.</p>
-                        <div class="btnContainer">
-                            <a id='animatedHeadDemo' onclick="buttonEffect('animatedHeadDemo')" href="https://codetracklift.github.io/eyemovement/" class="btn btn-secondary"
-                                target="_blank">Try Demo</a>
-                            <a id='animatedHeadRepo' onclick="buttonEffect('animatedHeadRepo')" href="https://github.com/codeTrackLift/eyemovement" class="btn btn-secondary btnRepo "
-                                target="'_blank">View Repo</a>
-                        </div>
+                    <div class="btnContainer">
+                        <a id='animatedHeadDemo' onclick="buttonEffect('animatedHeadDemo')"
+                            href="https://codetracklift.github.io/eyemovement/" class="btn btn-secondary"
+                            target="_blank">Try Demo</a>
+                        <a id='animatedHeadRepo' onclick="buttonEffect('animatedHeadRepo')"
+                            href="https://github.com/codeTrackLift/eyemovement" class="btn btn-secondary btnRepo "
+                            target="'_blank">View Repo</a>
+                    </div>
                 </div>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/pacman/aquaPacMan.png" class="card-img-top mx-auto pt-4" alt="Aqua-PacMan animated gif."
-                    style="width:10rem;">
+                <img src="../pics/pacman/aquaPacMan.png" class="card-img-top mx-auto pt-4"
+                    alt="Aqua-PacMan animated gif." style="width:10rem;">
                 <div class="card-body">
                     <h5 class="card-title">PacMan Factory</h5>
                     <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
                             Bootcamp Project</span> demonstrates use of array methods and DOM manipulation.</p>
                     <p class="card-text"><span>Custom features</span> include an 'Aqua' theme and <em>ZAP!</em> PacMan
                         button, see <a href="../pages/blog.html#blog5Button">blog[5]</a>.</p>
-                        <div class="btnContainer">
-                            <a id='pacManFactoryDemo' onclick="buttonEffect('pacManFactoryDemo')" href="https://codetracklift.github.io/pacmen_factory/" class="btn btn-secondary"
-                                target="_blank">Try Demo</a>
-                            <a id='pacManFactoryRepo' onclick="buttonEffect('pacManFactoryRepo')" href="https://github.com/codeTrackLift/pacmen_factory" class="btn btn-secondary btnRepo "
-                                target="'_blank">View Repo</a>
-                        </div>
+                    <div class="btnContainer">
+                        <a id='pacManFactoryDemo' onclick="buttonEffect('pacManFactoryDemo')"
+                            href="https://codetracklift.github.io/pacmen_factory/" class="btn btn-secondary"
+                            target="_blank">Try Demo</a>
+                        <a id='pacManFactoryRepo' onclick="buttonEffect('pacManFactoryRepo')"
+                            href="https://github.com/codeTrackLift/pacmen_factory" class="btn btn-secondary btnRepo "
+                            target="'_blank">View Repo</a>
+                    </div>
                 </div>
             </div>
 
@@ -113,14 +133,18 @@
                     style="width:8rem;">
                 <div class="card-body">
                     <h5 class="card-title">PacMan Mini-Game</h5>
-                    <p class="card-text">This coding exercise was <span>customized</span> into a '<span>mini-game</span>'
+                    <p class="card-text">This coding exercise was <span>customized</span> into a
+                        '<span>mini-game</span>'
                         with collision detection and score tracking. </p>
                     <p class="card-text">This is <span>fully responsive</span> and accepts keyboard, mouse, and mobile
                         screen inputs! See <a href='../pages/blog.html#blog3Button'>blog[3]</a>.</p>
                     <div class="btnContainer">
-                        <a id='pacManMiniGameDemo' onclick="buttonEffect('pacManMiniGameDemo')"href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play
+                        <a id='pacManMiniGameDemo' onclick="buttonEffect('pacManMiniGameDemo')"
+                            href="https://codetracklift.github.io/pacman/" class="btn btn-secondary"
+                            target="_blank">Play
                             Game</a>
-                        <a id='pacManMiniGameRepo' onclick="buttonEffect('pacManMiniGameRepo')" href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnRepo "
+                        <a id='pacManMiniGameRepo' onclick="buttonEffect('pacManMiniGameRepo')"
+                            href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnRepo "
                             target="'_blank">View Repo</a>
                     </div>
                 </div>
@@ -131,57 +155,69 @@
         <div class="container-fluid myArticles">
             <h3>Self-Taught Progression Projects</h3>
         </div>
-        
+
         <div id="myProjects2" class="row container-fluid justify-content-center">
 
             <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/projects/mermaid_camera.gif" class="card-img-top pt-4 mx-auto" alt="Mermaid camera logo"
-                    style="width:12rem;">
+                <img src="../pics/projects/mermaid_camera.gif" class="card-img-top pt-4 mx-auto"
+                    alt="Mermaid camera logo" style="width:12rem;">
                 <div class="card-body">
                     <h5 class="card-title">Photographer Landingpage</h5>
-                    <p class="card-text"><a href="https://www.lmnophoto.biz" target="_blank">LMNOPhoto.biz</a> was my <span>first
-                        freelance project</span> and was completed using <a
+                    <p class="card-text"><a href="https://www.lmnophoto.biz" target="_blank">LMNOPhoto.biz</a> was my
+                        <span>first
+                            freelance project</span> and was completed using <a
                             href="https://getbootstrap.com/docs/5.1/getting-started/introduction/"
                             target="_blank">Bootstrap</a> and <a href="https://scrollmagic.io/"
                             target="_blank">ScrollMagic</a>.</p>
                     <p class="card-text">Need a photography session in the Philadelphia / King of Prussia area?</p>
                     <div class="btnContainer">
-                        <a id='lmnoPhotoDemo' onclick="buttonEffect('lmnoPhotoDemo')" href="https://www.lmnophoto.biz/" class="btn btn-secondary" target="_blank">Visit Site</a>
-                        <a id='lmnoPhotoRepo' onclick="buttonEffect('lmnoPhotoRepo')" href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary btnRepo"
+                        <a id='lmnoPhotoDemo' onclick="buttonEffect('lmnoPhotoDemo')" href="https://www.lmnophoto.biz/"
+                            class="btn btn-secondary" target="_blank">Visit Site</a>
+                        <a id='lmnoPhotoRepo' onclick="buttonEffect('lmnoPhotoRepo')"
+                            href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary btnRepo"
                             target="'_blank">View Repo</a>
                     </div>
                 </div>
             </div>
 
             <div class="card col-sm-4" style="width:18rem;">
-                <img src="../pics/projects/odin-calc.ico" class="card-img-top px-5 pt-2" alt="Calculator image" style="height:10rem;">
+                <img src="../pics/projects/odin-calc.ico" class="card-img-top px-5 pt-2" alt="Calculator image"
+                    style="height:10rem;">
                 <div class="card-body">
                     <h5 class="card-title">JavaScript Calculator</h5>
                     <p class="card-text">My <span>third JavaScript Project</span>, this was also completed as part of <a
-                            href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.
+                            href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations
+                        course.
                     </p>
                     <p class="card-text">Accepts mouse and key inputs, and makes drum sound effects!</p>
                     <div class="btnContainer">
-                        <a id='jsCalcDemo' onclick="buttonEffect('jsCalcDemo')" href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Try
+                        <a id='jsCalcDemo' onclick="buttonEffect('jsCalcDemo')"
+                            href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary"
+                            target="_blank">Try
                             Demo</a>
-                        <a id='jsCalcRepo' onclick="buttonEffect('jsCalcRepo')" href="https://github.com/codeTrackLift/odin-calc" class="btn btn-secondary btnRepo"
+                        <a id='jsCalcRepo' onclick="buttonEffect('jsCalcRepo')"
+                            href="https://github.com/codeTrackLift/odin-calc" class="btn btn-secondary btnRepo"
                             target="'_blank">View Repo</a>
                     </div>
                 </div>
             </div>
 
             <div class="card col-sm-4" style="width:18rem;">
-                <img src="../pics/projects/etch-a-sketch.jpg" class="card-img-top py-4" alt="Screenshot of etch-a-sketch project.">
+                <img src="../pics/projects/etch-a-sketch.jpg" class="card-img-top py-4"
+                    alt="Screenshot of etch-a-sketch project.">
                 <div class="card-body">
                     <h5 class="card-title">Etch-A-Sketch</h5>
                     <p class="card-text">My <span>second JavaScript Project</span>, this was completed as part of <a
-                            href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.
+                            href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations
+                        course.
                     </p>
                     <p class="card-text">Accepts mouse and key inputs, and the pixel resolution can be resized!</p>
                     <div class="btnContainer">
-                        <a id='etchASketchDemo' onclick="buttonEffect('etchASketchDemo')" href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary"
+                        <a id='etchASketchDemo' onclick="buttonEffect('etchASketchDemo')"
+                            href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
-                        <a id='etchASketchRepo' onclick="buttonEffect('etchASketchRepo')" href="https://github.com/codeTrackLift/etch-a-sketch" class="btn btn-secondary btnRepo"
+                        <a id='etchASketchRepo' onclick="buttonEffect('etchASketchRepo')"
+                            href="https://github.com/codeTrackLift/etch-a-sketch" class="btn btn-secondary btnRepo"
                             target="'_blank">View Repo</a>
                     </div>
                 </div>
@@ -193,14 +229,17 @@
                 <div class="card-body">
                     <h5 class="card-title">Rock, Paper, Scissors</h5>
                     <p class="card-text">My <span>first JavaScript project</span>, this was completed as part of <a
-                            href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.
+                            href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations
+                        course.
                     </p>
                     <p class="card-text">Accepts text and mouse inputs with text validation and results tracking!</p>
                     <div class="btnContainer">
-                        <a id='rockPaperScissorshDemo' onclick="buttonEffect('rockPaperScissorshDemo')" href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary"
+                        <a id='rockPaperScissorshDemo' onclick="buttonEffect('rockPaperScissorshDemo')"
+                            href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary"
                             target="'_blank">Play Game</a>
-                        <a id='rockPaperScissorshRepo' onclick="buttonEffect('rockPaperScissorshRepo')" href="https://github.com/codeTrackLift/rock-paper-scissors" class="btn btn-secondary btnRepo"
-                            target="'_blank">View Repo</a>
+                        <a id='rockPaperScissorshRepo' onclick="buttonEffect('rockPaperScissorshRepo')"
+                            href="https://github.com/codeTrackLift/rock-paper-scissors"
+                            class="btn btn-secondary btnRepo" target="'_blank">View Repo</a>
                     </div>
                 </div>
             </div>
@@ -211,16 +250,20 @@
                 <div class="card-body">
                     <h5 class="card-title">Landingpage Project</h5>
                     <p class="card-text">My <span>first Landingpage</span>, this was completed as part of <a
-                            href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.
+                            href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations
+                        course.
                     </p>
                     <p class="card-text">This was made using vanilla HTML and CSS after completing the <a
-                            href="https://www.freecodecamp.org/learn/responsive-web-design/" target="_blank">Responsive Web
+                            href="https://www.freecodecamp.org/learn/responsive-web-design/" target="_blank">Responsive
+                            Web
                             Design</a> course at <a href="https://www.freecodecamp.org/"
                             target="_blank">freeCodeCamp.org</a>.</p>
                     <div class="btnContainer">
-                        <a id='odinLandingpageDemo' onclick="buttonEffect('odinLandingpageDemo')" href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary"
+                        <a id='odinLandingpageDemo' onclick="buttonEffect('odinLandingpageDemo')"
+                            href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary"
                             target="'_blank">Visit Site</a>
-                        <a id='odinLandingpageRepo' onclick="buttonEffect('odinLandingpageRepo')" href="https://github.com/codeTrackLift/odin-landingpage" class="btn btn-secondary btnRepo"
+                        <a id='odinLandingpageRepo' onclick="buttonEffect('odinLandingpageRepo')"
+                            href="https://github.com/codeTrackLift/odin-landingpage" class="btn btn-secondary btnRepo"
                             target="'_blank">View Repo</a>
                     </div>
                 </div>
