--- a/pages/resume.html
+++ b/pages/resume.html
@@ -8,6 +8,19 @@
 
     <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P18XGH56KT"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-P18XGH56KT');
+    </script>
+
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="../libraries/bootstrap.min.css">
 
@@ -36,8 +49,8 @@
 
         <section id="typeWriterSection">
             <figure id='typeWriter' class="mx-auto">
-                <h2 id="typeWriter1"><span style="color: cornflowerblue">stationInLife</span><span style='color:gray;'>.</span><span
-                        style="color:darkorchid;">replace</span>(</h2>
+                <h2 id="typeWriter1"><span style="color: cornflowerblue">stationInLife</span><span
+                        style='color:gray;'>.</span><span style="color:darkorchid;">replace</span>(</h2>
                 <h2 id="typeWriter2"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
                         style="color: #00857c;">Pharmaceutical
                         Engineer</span>'<span style='color:gray;'>,</span></h2>
@@ -51,15 +64,19 @@
             <h1 class="text-center">Education</h1>
             <div class="row m-auto">
                 <div class="col-sm-4 text-center my-2">
-                    <a href="https://xpro.mit.edu/" target="_blank"><img src="../pics/about/mitxPro_logoStacked.jpg" class='img-square col-sm-3 img-fluid p-2' alt="MIT xPro Logo Stacked."></a>
+                    <a href="https://xpro.mit.edu/" target="_blank"><img src="../pics/about/mitxPro_logoStacked.jpg"
+                            class='img-square col-sm-3 img-fluid p-2' alt="MIT xPro Logo Stacked."></a>
                     <h5 class="menloRegular">Professional Certificate</h5>
-                    <h6><a href="https://executive-ed.xpro.mit.edu/professional-certificate-coding" target="_blank">Full Stack MERN Web Development</a></h6>
+                    <h6><a href="https://executive-ed.xpro.mit.edu/professional-certificate-coding" target="_blank">Full
+                            Stack MERN Web Development</a></h6>
                     <div class="dateSection">
                         <p>Jul 2022 <span style="color:gray"><br>(in progress)</span></p>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center my-2">
-                    <a href="https://www.udel.edu/" target="_blank"><img src="../pics/about/udel_shield1743.gif" class=' img-fluid py-1 img-round text-center mx-auto mb-3' alt="University of Delware Shield Logo."></a>
+                    <a href="https://www.udel.edu/" target="_blank"><img src="../pics/about/udel_shield1743.gif"
+                            class=' img-fluid py-1 img-round text-center mx-auto mb-3'
+                            alt="University of Delware Shield Logo."></a>
                     <h5 class="menloRegular">Bachelor's Degree</h5>
                     <h6><a href="https://www.bio.udel.edu/" target="_blank">Biological Sciences</a></h6>
                     <div class="dateSection">
@@ -69,16 +86,24 @@
                 <div class="my-auto row text-center">
                     <h5 class="mt-4 menloRegular">Self-Taught</h5>
                     <div class="col-sm-5">
-                        <a href="https://www.freecodecamp.org" target="_blank"><img src="../pics/about/fcc_primary_large.png" alt="freeCodeCamp.org Logo" class="img-fluid img-rect m-3"></a>
+                        <a href="https://www.freecodecamp.org" target="_blank"><img
+                                src="../pics/about/fcc_primary_large.png" alt="freeCodeCamp.org Logo"
+                                class="img-fluid img-rect m-3"></a>
                         <br>
-                        <a href="https://www.theodinproject.com" target="_blank"><img src="../pics/about/theOdinProject.png" alt="The Odin Project Logo" class="img-fluid img-rect mb-4"></a>
+                        <a href="https://www.theodinproject.com" target="_blank"><img
+                                src="../pics/about/theOdinProject.png" alt="The Odin Project Logo"
+                                class="img-fluid img-rect mb-4"></a>
                     </div>
                     <div class="col-sm-7 text-center my-auto">
-                        <h6><a href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/javascript-algorithms-and-data-structures">JavaScript Algorithms & Data Structures</a></h6>
+                        <h6><a
+                                href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/javascript-algorithms-and-data-structures">JavaScript
+                                Algorithms & Data Structures</a></h6>
                         <div class="dateSection text-center mb-2">
                             <p>Jan 2022</p>
                         </div>
-                        <h6><a href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/responsive-web-design">Responsive Web Design</a></h6>
+                        <h6><a
+                                href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/responsive-web-design">Responsive
+                                Web Design</a></h6>
                         <div class="dateSection text-center">
                             <p>Dec 2021</p>
                         </div>
@@ -92,12 +117,16 @@
             <div class="row">
                 <img src="../pics/about/html5_logo.gif" class='col-sm-2 img-fluid img-round' alt="HTML5 Logo.">
                 <img src="../pics/about/css3_logo.gif" class='col-sm-2 img-fluid img-round' alt="CSS3 Logo.">
-                <img src="../pics/about/javascript_logo.gif" class='col-sm-2 img-fluid img-round' alt="JavaScript Logo.">
+                <img src="../pics/about/javascript_logo.gif" class='col-sm-2 img-fluid img-round'
+                    alt="JavaScript Logo.">
             </div>
             <div class="row">
-                <img src="../pics/about/gitLogoOrangeRed.png" class='py-3 col-sm-2 img-fluid img-square' alt="Bootstrap Logo.">
-                <img src="../pics/about/vsCodeLogo.png" class='py-3 col-sm-2 img-fluid img-square' alt="Visual Studio Code Logo.">
-                <img src="../pics/about/bootstrap-logo.svg" class='py-3 col-sm-2 img-fluid img-square' alt="Bootstrap Logo.">
+                <img src="../pics/about/gitLogoOrangeRed.png" class='py-3 col-sm-2 img-fluid img-square'
+                    alt="Bootstrap Logo.">
+                <img src="../pics/about/vsCodeLogo.png" class='py-3 col-sm-2 img-fluid img-square'
+                    alt="Visual Studio Code Logo.">
+                <img src="../pics/about/bootstrap-logo.svg" class='py-3 col-sm-2 img-fluid img-square'
+                    alt="Bootstrap Logo.">
             </div>
         </div>
 
@@ -120,9 +149,12 @@
             <div>
                 <span class="h3">Description</span>
             </div>
-            <p>LeNova, Inc. has over 30 years of experience as an engineering and technology solutions provider. They focus
-                on the Life Sciences and Commercial industries, but have a specialization in the Biopharmaceutical space. I
-                joined LeNova in 2022 to support business expansion initiatives, lead website development efforts, and build upon core competencies.</p>
+            <p>LeNova, Inc. has over 30 years of experience as an engineering and technology solutions provider. They
+                focus
+                on the Life Sciences and Commercial industries, but have a specialization in the Biopharmaceutical
+                space. I
+                joined LeNova in 2022 to support business expansion initiatives, lead website development efforts, and
+                build upon core competencies.</p>
             <p>My roles and responsibilities include:</p>
             <ul>
                 <li>Responsive web development using HTML, CSS, and JavaScript.</li>
@@ -151,29 +183,34 @@
                 </div>
             </div>
             <div class="row">
-                <span class="h3 col-sm-3">Position</span><span class='h5 px-3 col-sm-9' style='color:white;'>Senior Quality
+                <span class="h3 col-sm-3">Position</span><span class='h5 px-3 col-sm-9' style='color:white;'>Senior
+                    Quality
                     Engineer</span>
             </div>
             <div>
                 <span class="h3">Description</span>
             </div>
-            <p>Eisai is a research based human health care company that discovers, develops, and markets products throughout
+            <p>Eisai is a research based human health care company that discovers, develops, and markets products
+                throughout
                 the
                 world. I started at Eisai when it was still known as Morphotek and I was initially hired as a Contract
                 Senior
-                Validation Specialist, but transitioned to a full time employee with their Quality Assurance organization in
+                Validation Specialist, but transitioned to a full time employee with their Quality Assurance
+                organization in
                 2012.
             </p>
             <p>My roles and responsibilities included:</p>
             <ul>
-                <li>Quality Lead for: Document Control, Validation, Facilities, Automation, Deviation Management, and Change
+                <li>Quality Lead for: Document Control, Validation, Facilities, Automation, Deviation Management, and
+                    Change
                     Control.</li>
                 <li>Manage, mentor, and develop junior validation / quality staff.</li>
                 <li>Provide guidance on calibration, preventive maintenance, and process tolerance programs.</li>
                 <li>Develop procedures to support Commercialization and Pilot Plant Commissioning / Qualification /
                     Validation
                     (CQV) program.</li>
-                <li>Meeting Leadership Skills: collaborating with stakeholders, requesting and proposing changes, assessing
+                <li>Meeting Leadership Skills: collaborating with stakeholders, requesting and proposing changes,
+                    assessing
                     impact
                     and establishing justification, establishing an implementation plan, execution and closure of
                     implementation
@@ -210,28 +247,33 @@
                 <span class="h3">Description</span><span class='h5 px-3' style='color:white;'></span>
             </div>
             <p>Janssen Pharmaceuticals is a wholly-owned subsidiary of Johnson & Johnson, and acquired Centocor
-                Biopharmaceutical in 1999. Centocor was a world leader in monoclonal antibody production and cell therapy
+                Biopharmaceutical in 1999. Centocor was a world leader in monoclonal antibody production and cell
+                therapy
                 technology. I joined Centocor R&D / J&J in 2006 as a Validation Engineer II.</p>
             <p>My roles and responsibilities included:</p>
             <ul>
                 <li>Managing a multi-site laboratory equipment qualification program.</li>
                 <li>Managing a plant floor automation program that supports two pilot plant facilities and one QC
                     laboratory.</li>
-                <li>Responsible for day-to-day activities of Validation and Automation Consultants, includes: project scope,
+                <li>Responsible for day-to-day activities of Validation and Automation Consultants, includes: project
+                    scope,
                     budget, schedule, and cross-functional communications.</li>
-                <li>Conducting and overseeing investigations from qualification discrepancies and atypical events; includes
+                <li>Conducting and overseeing investigations from qualification discrepancies and atypical events;
+                    includes
                     root
                     cause analysis, proposing and implementing corrective actions, and effectiveness checks</li>
                 <li>Providing technical support for production deviations and audit observations, includes initiating
                     atypical
                     events, conducting event investigations, and implementing corrective actions</li>
-                <li>Supporting lean manufacturing efficiency initiatives and conducting Failure Mode and Effects Analysis
+                <li>Supporting lean manufacturing efficiency initiatives and conducting Failure Mode and Effects
+                    Analysis
                     (FMEA)
                 </li>
                 <li>Performing, executing, and overseeing qualification studies for sterilization, cleaning, process
                     equipment,
                     and systems</li>
-                <li>Authoring, reviewing, revising and approving a variety of cGMP documentation; including but not limited
+                <li>Authoring, reviewing, revising and approving a variety of cGMP documentation; including but not
+                    limited
                     to the
                     following: SOPs, site qualification master plans, design documents, atypical events, event
                     investigations,
@@ -258,7 +300,8 @@
                 <span class="h3">Description</span>
             </div>
             <p>Integrated Project Services is a fully integrated, design-build engineering firm specializing in the life
-                sciences and semiconductor industries. I joined IPS as a Validation Specialist in 2002 after graduated from
+                sciences and semiconductor industries. I joined IPS as a Validation Specialist in 2002 after graduated
+                from
                 the
                 University of Delaware with a Bachelor's Degree in Biological Sciences.</p>
             <p>My roles and responsibilities included:</p>
@@ -266,7 +309,8 @@
                 <li>Detailed preparation, execution, and review of validation protocols, test scripts, and reports,
                     commissioning
                     documentation, engineering turnover packages, and standard operating procedures.</li>
-                <li>Proficient in operation of Emerson DeltaV software, experienced in reading and interpreting run logic
+                <li>Proficient in operation of Emerson DeltaV software, experienced in reading and interpreting run
+                    logic
                 </li>
                 <li>Performance Qualifications for Steam-In-Place procedures</li>
                 <li>Computer system validation support during all phases of product development life cycle and
@@ -274,7 +318,8 @@
                 <li>Calibration, qualification, and utilization of a variety of validation equipment, including the Kaye
                     Validator
                     2000</li>
-                <li>Correspondence with engineering, maintenance, validation, vendors, owners, and quality assurance.</li>
+                <li>Correspondence with engineering, maintenance, validation, vendors, owners, and quality assurance.
+                </li>
             </ul>
         </div>
 
