--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -8,6 +8,19 @@
 
     <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P18XGH56KT"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-P18XGH56KT');
+    </script>
+
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="../libraries/bootstrap.min.css">
 
@@ -43,9 +56,12 @@
 
     <section id="typeWriterSection" class="">
         <figure id='typeWriter' class="mx-auto">
-            <h2 id="typeWriter1"><span style="color: cornflowerblue">stationInLife</span><span style='color:gray;'>.</span><span style="color:darkorchid;">replace</span>(</h2>
-            <h2 id="typeWriter2"><span style="color:black;text-shadow:none;">__</span>'<span style="color: #00857c;">Pharmaceutical Engineer</span>'<span style='color:gray;'>,</span></h2>
-            <h2 id="typeWriter3"><span style="color:black;text-shadow:none;">__</span>'<span style="color:lime;">Software Developer</span>')<span style='color:gray;'>;</span></h2>
+            <h2 id="typeWriter1"><span style="color: cornflowerblue">stationInLife</span><span
+                    style='color:gray;'>.</span><span style="color:darkorchid;">replace</span>(</h2>
+            <h2 id="typeWriter2"><span style="color:black;text-shadow:none;">__</span>'<span
+                    style="color: #00857c;">Pharmaceutical Engineer</span>'<span style='color:gray;'>,</span></h2>
+            <h2 id="typeWriter3"><span style="color:black;text-shadow:none;">__</span>'<span
+                    style="color:lime;">Software Developer</span>')<span style='color:gray;'>;</span></h2>
         </figure>
     </section>
 
@@ -61,13 +77,15 @@
                 </figcaption>
             </div>
             <div class="carousel-item">
-                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Front-load effort, spend time to understand the problem before proposing a solution."</h3>
+                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Front-load effort, spend time to
+                    understand the problem before proposing a solution."</h3>
                 <figcaption class="blockquote-footer text-end mt-3 mx-5">
                     <cite title="Source Title">quoteByPete</cite>
                 </figcaption>
             </div>
             <div class="carousel-item">
-                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are planned before implementation, and tested before release."</h3>
+                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are planned
+                    before implementation, and tested before release."</h3>
                 <figcaption class="blockquote-footer text-end mt-3 mx-5">
                     <cite title="Source Title">quoteByPete</cite>
                 </figcaption>
@@ -91,10 +109,10 @@
         setActiveNavlink('navlinkWelcome');
         navbarCBPRemove();
         setTimeout(injectWelcomeBackground, 2850);
-        setTimeout(injectWelcome,3000);
-        setTimeout(initScrollMagic,3100);
-        setTimeout(unhideCarousel,3100);
-        setTimeout(injectMyFooter,3000);
+        setTimeout(injectWelcome, 3000);
+        setTimeout(initScrollMagic, 3100);
+        setTimeout(unhideCarousel, 3100);
+        setTimeout(injectMyFooter, 3000);
     </script>
 </body>
 
