unique page titles

--- a/pages/construction.html
+++ b/pages/construction.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="../css/construction.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
-    <title>codeByPete</title>
+    <title>codeByPete[construction]</title>
 </head>
 
 <body>
