--- a/pages/blog.html
+++ b/pages/blog.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="../css/blog.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
-    <title>codeByPete</title>
+    <title>codeByPete[blog]</title>
 </head>
 
 <body>
