--- a/pages/projects.html
+++ b/pages/projects.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="../css/projects.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
-    <title>codeByPete</title>
+    <title>codeByPete[projects]</title>
 </head>
 
 <body>
