--- a/pages/resume.html
+++ b/pages/resume.html
@@ -163,10 +163,9 @@
                 <li>Processing and editing of digital image and video content. </li>
                 <li>Ensure full mobile and browser compatibility.</li>
                 <li>Testing, hosting, maintenance, and updates.</li>
-                <li>Utilizing Agile development methodology.</li>
                 <li>Implementing Web Content Accessibility Guidelines 2.1.</li>
                 <li>Continuous Integration / Continuous Deployment (CI/CD).</li>
-                <li>Search Engine Optimization (SEO) and Google Lighthouse.</li>
+                <li>Search Engine Optimization (SEO), Google Lighthouse and Analytics.</li>
                 <li>Test Driven Development (TDD), as applicable.</li>
             </ul>
         </div>
