about carousel add, global carousel css

--- a/pages/about.html
+++ b/pages/about.html
@@ -131,6 +131,29 @@
             </div>
         </div>
 
+        <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"If something is important to you, I would encourage you to pursue it relentlessly."</h3>
+                    <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
+                    </figcaption>
+                </div>
+                <div class="carousel-item">
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"I am a fast learner, if I had a 'super-power' it would be the ability to focus."</h3>
+                    <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
+                    </figcaption>
+                </div>
+                <div class="carousel-item">
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"I spent 20 years pursuing success, I will spend the next 20 pursuing my passion."</h3>
+                    <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
+                    </figcaption>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <footer id="footer" class="container-fluid"></footer>
