--- a/pages/contact.html
+++ b/pages/contact.html
@@ -137,35 +137,35 @@
             </div>
         </div>
 
-        <!-- <div id='googleMap' class="container-fluid text-center">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1976040.4504721882!2d-76.43266417409015!3d39.943936309783176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c191f3adf4a9%3A0x4066eeee7bc551d0!2sPhiladelphia%20Metropolitan%20Area!5e1!3m2!1sen!2sus!4v1646411057945!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></iframe>
-        </div> -->
-
         <div id="carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Pharmaceutical experience
                         drives my Good Documentation Practices (GDPs)."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
-                        <cite title="Source Title">quoteByPete</cite>
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
                 </div>
                 <div class="carousel-item">
                     <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Front-load effort, spend time
                         to understand the problem before proposing a solution."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
-                        <cite title="Source Title">quoteByPete</cite>
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
                 </div>
                 <div class="carousel-item">
                     <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are
                         planned before implementation, and tested before release."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
-                        <cite title="Source Title">quoteByPete</cite>
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
                 </div>
             </div>
         </div>
+
+        <!-- <div id='googleMap' class="container-fluid text-center">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1976040.4504721882!2d-76.43266417409015!3d39.943936309783176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c191f3adf4a9%3A0x4066eeee7bc551d0!2sPhiladelphia%20Metropolitan%20Area!5e1!3m2!1sen!2sus!4v1646411057945!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></iframe>
+        </div> -->
 
     </main>
 
