--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -73,21 +73,21 @@
                 <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Pharmaceutical experience
                     drives my Good Documentation Practices (GDPs)."</h3>
                 <figcaption class="blockquote-footer text-end mt-3 mx-5">
-                    <cite title="Source Title">quoteByPete</cite>
+                    <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                 </figcaption>
             </div>
             <div class="carousel-item">
-                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Front-load effort, spend time to
-                    understand the problem before proposing a solution."</h3>
+                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Front-load effort, spend time
+                    to understand the problem before proposing a solution."</h3>
                 <figcaption class="blockquote-footer text-end mt-3 mx-5">
-                    <cite title="Source Title">quoteByPete</cite>
+                    <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                 </figcaption>
             </div>
             <div class="carousel-item">
-                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are planned
-                    before implementation, and tested before release."</h3>
+                <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are
+                    planned before implementation, and tested before release."</h3>
                 <figcaption class="blockquote-footer text-end mt-3 mx-5">
-                    <cite title="Source Title">quoteByPete</cite>
+                    <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                 </figcaption>
             </div>
         </div>
