--- a/pages/about.html
+++ b/pages/about.html
@@ -131,6 +131,16 @@
             </div>
         </div>
 
+        <div class="container-fluid">
+            <h5 class="menloRegular text-silver textShadowBlack text-center">Demo projects, see my progression. Need help with your project?</h5>
+            <div class="btnContainer container-fluid text-center mt-4 d-flex justify-content-evenly">
+                <a id='buttonProjects' onclick="buttonEffect('buttonProjects')"
+                    href="https://codetracklift.github.io/bustracker/" class="btn btn-secondary">Projects</a>
+                <a id='buttonContact' onclick="buttonEffect('buttonContact')"
+                    href="https://github.com/codeTrackLift/bustracker" class="btn btn-secondary btnRepo">Contact</a>
+            </div>
+        </div>
+
         <div id="carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -146,7 +156,7 @@
                     </figcaption>
                 </div>
                 <div class="carousel-item">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"I spent 20 years pursuing success, I will spend the next 20 pursuing my passion."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"I spent 20 years pursuing 'success,' I will spend the next 20 pursuing my passion."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
                         <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
@@ -165,6 +175,7 @@
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
     <script src="../js/footer.js"></script>
+    <script src="../js/cards.js"></script>
     <script src="../js/about.js"></script>
     <script>
         injectMyNavbar();
