about btn link fix

--- a/pages/about.html
+++ b/pages/about.html
@@ -135,9 +135,9 @@
             <h5 class="menloRegular text-silver textShadowBlack text-center">Demo projects, see my progression. Need help with your project?</h5>
             <div class="btnContainer container-fluid text-center mt-4 d-flex justify-content-evenly">
                 <a id='buttonProjects' onclick="buttonEffect('buttonProjects')"
-                    href="https://codetracklift.github.io/bustracker/" class="btn btn-secondary">Projects</a>
+                    href="../pages/projects.html" class="btn btn-secondary">Projects</a>
                 <a id='buttonContact' onclick="buttonEffect('buttonContact')"
-                    href="https://github.com/codeTrackLift/bustracker" class="btn btn-secondary btnRepo">Contact</a>
+                    href="../pages/contact.html" class="btn btn-secondary btnRepo">Contact</a>
             </div>
         </div>
 
