bus proj btn click

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -78,10 +78,10 @@
                     <p class="card-text">Custom styling and extra user interface functionality was added, see <a
                             href="../pages/blog.html#blog6Button">blog[6]</a>.</p>
                     <div class="btnContainer">
-                        <a id='animatedHeadDemo' onclick="buttonEffect('animatedHeadDemo')"
+                        <a id='busTrackerDemo' onclick="buttonEffect('busTrackerDemo')"
                             href="https://codetracklift.github.io/bustracker/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
-                        <a id='animatedHeadRepo' onclick="buttonEffect('animatedHeadRepo')"
+                        <a id='busTrackerRepo' onclick="buttonEffect('busTrackerRepo')"
                             href="https://github.com/codeTrackLift/bustracker" class="btn btn-secondary btnRepo "
                             target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
